--- a/Simulador financeiro/style.css
+++ b/Simulador financeiro/style.css
@@ -29,26 +29,15 @@
         
         .container {
             background-color: white;
-            width: 400px;
-            height: 200px;
+            width: 500px;
+            height: 400px;
             padding: 25px;
             /* é a margin interna*/
             text-align: center;
-            border: 5px solid black;
-            border-radius: 50px;
-            margin-left: 50px;
-            margin-top: 200px;
+            border: 5px solid black;/*Borda na de espessura e cor*/
+            border-radius: 50px; /*Arredondamento de borda*/
+            margin: auto;
+            margin-top: 25px;
+            font-family: 'Poppins', sans-serif;
         }
         
-        .nav-btn {
-            background-color: white;
-            width: 400px;
-            height: 250px;
-            padding: 25px;
-            text-align: center;
-            border: 5px solid black;
-            border-radius: 50px;
-            float: right;
-            margin-right: 50px;
-            margin-top: -265px;
-        }
