--- a/Simulador financeiro/style.css
+++ b/Simulador financeiro/style.css
@@ -39,5 +39,7 @@
             margin: auto;
             margin-top: 25px;
             font-family: 'Poppins', sans-serif;
+            overflow: auto;
         }
         
+
